--- a/SardiniaInFood/css/fogliodistile.css
+++ b/SardiniaInFood/css/fogliodistile.css
@@ -1085,7 +1085,8 @@ cursor: pointer;
 ========================================================================== */
 .errore,
 .avviso,
-.successo {
+.successo,
+avviso-amministratore {
 margin: 0 auto;
 width: 740px;
 height: auto;
@@ -1100,7 +1101,7 @@ font-size: 18px;
 background: #D82726 url('http://spano.sc.unica.it/amm2014/aresuCarlo/SardiniaInFood/images/error.png') 5px 8px no-repeat;
 background-size: 40px 40px;
 }
-.avviso {
+.avviso, avviso-amministratore {
 background: #D82726 url('http://spano.sc.unica.it/amm2014/aresuCarlo/SardiniaInFood/images/avviso.png') 5px 8px no-repeat;
 background-size: 40px 40px;
 }
@@ -1108,6 +1109,10 @@ background-size: 40px 40px;
 background: #D82726 url('http://spano.sc.unica.it/amm2014/aresuCarlo/SardiniaInFood/images/successo.png') 5px 8px no-repeat;
 background-size: 40px 40px;
 }
+avviso-amministratore {
+margin-top: 20px;
+}
+
 .messaggio-errore {
 float: left;
 width: 100%;
