--- a/SardiniaInFood/css/fogliodistile.css
+++ b/SardiniaInFood/css/fogliodistile.css
@@ -1109,7 +1109,7 @@ background-size: 40px 40px;
 background: #D82726 url('http://spano.sc.unica.it/amm2014/aresuCarlo/SardiniaInFood/images/successo.png') 5px 8px no-repeat;
 background-size: 40px 40px;
 }
-avviso-amministratore {
+.avviso-amministratore {
 margin-top: 20px;
 }
 
